# omicron-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Browser_arch.md  README.md  pyproject.toml  requirements.txt  run.py  run_whatsapp_session_controller.py
app/: auth.py  dependencies.py  main.py
app/agents/: __init__.py  base_agent.py  browser_agent.py  gmail_agent.py  google_drive_agent.py  orchestrator_agent.py  registry.py  whatsapp_agent.py  workflow.py
app/browser_sessions/: __init__.py  base.py  controller_client.py  controller_provider.py  lazy_mcp_server.py  local_provider.py  provider_factory.py
app/core/: enums.py  exceptions.py  settings.py
app/db/: chat_sessions_sql.py  gmail_sql.py  google_drive_sql.py  oauth_transactions_sql.py  onboarding_sql.py  schema.sql  sqlite.py  whatsapp_runtime_leases_sql.py  whatsapp_sql.py
app/services/: __init__.py  oauth_state.py  oauth_unified_service.py  onboarding_service.py
app/utils/: agent_utils.py  browser_agent_utils.py  encryption_utils.py  gmail_utils.py  (+3 more)
browser_session_controller/: README.md  __init__.py  auth.py  k8s.py  main.py  requirements.txt  run.py  settings.py  supabase_admin.py
k8s/: browser-runner.yaml  browser-session-controller.yaml  namespaces.yaml  networkpolicy-pw-mcp-runner.yaml
tests/: test_agent_route.py  test_gmail_agent.py  test_whatsapp_connect_lifecycle.py  test_whatsapp_controller_provider.py  test_whatsapp_session_controller_runtime_manager.py  test_whatsapp_session_controller_settings.py
whatsapp_session_controller/: README.md  __init__.py  auth.py  main.py  run.py
(+61 files in other folders)
